force-app/main/default/objects/Bank_Account_Setting__c/Bank_Account_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Bank Account Setting</label>
</CustomObject>