force-app/main/default/objects/Bank_Account_Setting__c/fields/Current_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_No__c</fullName>
    <label>Current Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>