force-app/main/default/objects/Bank_Account_Setting__c/fields/RTGS_IFSC__c.field-meta.xml
<CustomField>
    <fullName>RTGS_IFSC__c</fullName>
    <label>RTGS/IFSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>